# minipub

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
.nvim/: rust_analyzer.json
env/: .env.example
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: constant.rs  main.rs
src/routing/: user.rs
src/routing/well_known/: mod.rs
