[package]
name = "minipub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.5.17", features = ["headers"] }
const_format = "0.2.30"
once_cell = "1.16.0"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = [
  "rustls",
], default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
